new structure in causality chapter, added literature

--- a/bib.bib
+++ b/bib.bib
@@ -23,3 +23,18 @@
   publisher = {MIT Press},
   year = {2017},
 }
+
+@Book{pearl2019,
+  title = {The book of why: the new science of cause and effect},
+  author = {Judea Pearl and Dana Mackenzie},
+  publisher = {Basic Books},
+  year = {2018},
+}
+
+
+@Book{halpern2016,
+  title = {Actual causality},
+  author = {Joseph Y. Halpern},
+  publisher = {MIT Press},
+  year = {2016},
+}
