--- a/bib.bib
+++ b/bib.bib
@@ -31,10 +31,9 @@
   year = {2018},
 }
 
-
 @Book{halpern2016,
   title = {Actual causality},
-  author = {Joseph Y. Halpern},
+  author = {Joseph Halpern},
   publisher = {MIT Press},
   year = {2016},
 }
