--- a/bib.bib
+++ b/bib.bib
@@ -37,3 +37,12 @@
   publisher = {MIT Press},
   year = {2016},
 }
+
+@Manual{r2020,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2020},
+  url = {https://www.R-project.org/},
+}
